--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -62,6 +62,13 @@
         <action
             android:id="@+id/action_profileFragment_to_editCompanyProfileFragment"
             app:destination="@id/editCompanyProfileFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_editPost"
+            app:destination="@id/editPost">
+            <argument
+                android:name="postId"
+                app:argType="string" />
+        </action>
     </fragment>
     <fragment
         android:id="@+id/signUpCompanyFragment"
@@ -133,7 +140,11 @@
         android:id="@+id/editPost"
         android:name="com.android.skillsync.editPost"
         android:label="fragment_edit_post"
-        tools:layout="@layout/fragment_edit_post" />
+        tools:layout="@layout/fragment_edit_post" >
+        <action
+            android:id="@+id/action_editPost_to_profileFragment"
+            app:destination="@id/profileFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/editGroupProfileFragment"
