--- a/app/src/main/res/layout/fragment_edit_post.xml
+++ b/app/src/main/res/layout/fragment_edit_post.xml
@@ -38,7 +38,7 @@
         app:layout_constraintTop_toBottomOf="@+id/edit_project_details" />
 
     <include
-        android:id="@+id/project_name"
+        android:id="@+id/edit_project_name"
         layout="@layout/custom_input_field_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -51,20 +51,20 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <include
-        android:id="@+id/multi_line_project_description"
+        android:id="@+id/edit_multi_line_project_description"
         layout="@layout/custom_multi_line_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
+        android:layout_marginBottom="200dp"
         app:layout_constraintBottom_toTopOf="@+id/save_post"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/project_name"
+        app:layout_constraintTop_toBottomOf="@+id/edit_project_name"
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
-        android:id="@+id/image_to_upload"
+        android:id="@+id/edit_image_to_upload"
         android:layout_width="189dp"
         android:layout_height="137dp"
         android:contentDescription="@string/image_s_post"
@@ -72,7 +72,7 @@
         app:layout_constraintBottom_toTopOf="@+id/save_post"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/multi_line_project_description"
+        app:layout_constraintTop_toTopOf="@+id/edit_multi_line_project_description"
         app:layout_constraintVertical_bias="0.744" />
 
     <Button
