--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -29,24 +29,24 @@
         <ImageView
             android:id="@+id/post_edit_button"
             android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_height="35dp"
             android:layout_marginEnd="20dp"
             android:layout_gravity="end"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@drawable/edit_icon" />
 
-            <ImageView
-                android:id="@+id/deletePostButton"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginEnd="20dp"
-                android:visibility="gone"
-                android:layout_gravity="end"
-                android:src="@drawable/trash_icon"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+        <ImageView
+            android:id="@+id/deletePostButton"
+            android:layout_width="20dp"
+            android:layout_height="32dp"
+            android:layout_marginEnd="20dp"
+            android:visibility="gone"
+            android:layout_gravity="end"
+            android:src="@drawable/trash_icon"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
         </LinearLayout>
 
         <LinearLayout
@@ -64,6 +64,7 @@
                     android:id="@+id/imagePost"
                     android:layout_width="0dp"
                     android:layout_height="150dp"
+                    android:layout_marginTop="20dp"
                     app:layout_constraintHeight_max="100dp"
                     android:layout_weight="1"
                     android:visibility="gone" />
@@ -73,38 +74,30 @@
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
                 <TextView
                     android:id="@+id/ownerName"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="10dp"
                     android:text="@string/name"
                     android:textSize="17dp"
                     android:textStyle="bold" />
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:paddingTop="10dp"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
                 <TextView
                     android:id="@+id/content"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="20dp"
                     android:layout_weight="1"
                     android:text="TextView" />
 
             </LinearLayout>
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
