save user on logIn + reset image on add post + bug fix on map

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,6 +18,9 @@
         <action
             android:id="@+id/action_startPageFragment_to_pickUserTypeFragment"
             app:destination="@id/pickUserTypeFragment" />
+        <action
+            android:id="@+id/action_startPageFragment_to_mapViewFragment"
+            app:destination="@id/mapViewFragment" />
     </fragment>
 
     <fragment
