default avaters image + bug on profile

--- a/app/src/main/res/layout/fragment_edit_company_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_company_profile.xml
@@ -125,7 +125,7 @@
         android:id="@+id/companyImage"
         android:layout_width="119dp"
         android:layout_height="104dp"
-        android:src="@drawable/student_icon"
+        android:src="@drawable/user_avatar"
         app:layout_constraintBottom_toTopOf="@+id/save_group_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
