--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -60,7 +60,8 @@
 
             <ImageView
                 android:id="@+id/profile_image"
-                android:layout_width="110dp"
+                android:src="@drawable/user_avatar"
+                android:layout_width="match_parent"
                 android:layout_height="110dp"
                 android:orientation="vertical" />
         </androidx.cardview.widget.CardView>
