--- a/app/src/main/res/layout/user_profile_dialog.xml
+++ b/app/src/main/res/layout/user_profile_dialog.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -9,28 +10,34 @@
         android:id="@+id/textViewName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text=""
+        android:textAlignment="center"
         android:textSize="18sp"
-        android:textStyle="bold"
-        android:text="" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textViewEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:text="" />
+        android:text=""
+        android:textAlignment="center"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/textViewBio"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:text="" />
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        android:text=""
+        android:textAlignment="center"
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/buttonMoreDetails"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="View full profile" />
 
 </LinearLayout>
