--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -22,34 +22,6 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/post_edit_button"
-            android:layout_width="30dp"
-            android:layout_height="35dp"
-            android:layout_marginEnd="20dp"
-            android:layout_gravity="end"
-            android:visibility="gone"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/edit_icon" />
-
-        <ImageView
-            android:id="@+id/deletePostButton"
-            android:layout_width="20dp"
-            android:layout_height="32dp"
-            android:layout_marginEnd="20dp"
-            android:visibility="gone"
-            android:layout_gravity="end"
-            android:src="@drawable/trash_icon"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-        </LinearLayout>
-
-        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_margin="15dp"
@@ -64,10 +36,11 @@
                     android:id="@+id/imagePost"
                     android:layout_width="0dp"
                     android:layout_height="150dp"
-                    android:layout_marginTop="20dp"
-                    app:layout_constraintHeight_max="100dp"
+                    android:layout_marginBottom="10dp"
                     android:layout_weight="1"
-                    android:visibility="gone" />
+                    android:scaleType="centerCrop"
+                    android:visibility="gone"
+                    app:layout_constraintHeight_max="100dp" />
             </LinearLayout>
 
             <LinearLayout
@@ -78,12 +51,13 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
+
                 <TextView
                     android:id="@+id/ownerName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
                     android:layout_weight="1"
-                    android:layout_marginTop="10dp"
                     android:text="@string/name"
                     android:textSize="17dp"
                     android:textStyle="bold" />
@@ -91,13 +65,45 @@
 
                 <TextView
                     android:id="@+id/content"
-                    android:layout_width="wrap_content"
-                    android:layout_height="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="7dp"
                     android:layout_weight="1"
                     android:text="TextView" />
 
             </LinearLayout>
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/post_actions_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="20dp"
+            android:gravity="right"
+            android:orientation="horizontal"
+            tools:visibility="visible">
+
+            <ImageView
+                android:id="@+id/post_edit_button"
+                android:layout_width="30dp"
+                android:layout_height="35dp"
+                android:layout_gravity="end"
+                android:visibility="visible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/edit_icon" />
+
+            <ImageView
+                android:id="@+id/deletePostButton"
+                android:layout_width="30dp"
+                android:layout_height="35dp"
+                android:layout_gravity="end"
+                android:src="@drawable/delete_icon"
+                android:visibility="visible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
