--- a/app/src/main/res/layout/fragment_edit_group_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_group_profile.xml
@@ -66,8 +66,8 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="200dp"
-        android:layout_height="180dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/save_group_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,13 +75,20 @@
 
         <ImageView
             android:id="@+id/studentImage"
+            android:src="@drawable/user_avatar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:contentDescription="@string/user_image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:adjustViewBounds="false"
-            android:scaleType="centerCrop"
-            app:srcCompat="@drawable/user_avatar"
+            app:layout_constraintDimensionRatio="1:1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:adjustViewBounds="true"
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/default_post"
+            app:layout_constraintWidth_percent="0.6"
             tools:layout_editor_absoluteX="20dp"/>
+
 
         <LinearLayout
             android:id="@+id/edit_image_loading_overlay"
